--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,6 @@
     <string name="text_categori_4">Minum</string>
     <string name="text_tittle_list">List Menu Makanan</string>
     <string name="text_menu_1">Ayam Goreng</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
